@@ -1,0 +1,95 @@
+/*
+ *                  Sun Public License Notice
+ *
+ * The contents of this file are subject to the Sun Public License
+ * Version 1.0 (the "License"); you may not use this file except in
+ * compliance with the License. A copy of the License is available at
+ * http://www.sun.com/
+ *
+ * The Original Code is SoftSmithy Utility Library. The Initial Developer of the
+ * Original Code is Florian Brunner (Sourceforge.net user: puce). All Rights Reserved.
+ *
+ * Contributor(s): .
+ */
+
+/*
+ * JTreeCustomizerBar.java
+ *
+ * Created on 27. Februar 2003, 19:20
+ */
+
+package org.softsmithy.lib.swing;
+
+import java.util.*;
+import javax.swing.*;
+import javax.swing.tree.*;
+
+
+/**
+ *
+ * @author  puce
+ */
+public class JXTree extends JTree{
+  
+  public JXTree(){
+    super();
+    init();
+  }
+  
+  public JXTree(Hashtable value){
+    super(value);
+    init();
+  }
+  
+  public JXTree(Object[] value){
+    super(value);
+    init();
+  }
+  
+  public JXTree(TreeModel newModel){
+    super(newModel);
+    init();
+  }
+  
+  public JXTree(TreeNode root){
+    super(root);
+    init();
+  }
+  
+  public JXTree(TreeNode root, boolean asksAllowsChildren){
+    super(root, asksAllowsChildren);
+    init();
+  }
+  
+  public JXTree(Vector value){
+    super(value);
+    init();
+  }
+  
+  private void init() {
+    initComponents();
+  }
+  
+  /** This method is called from within the constructor to
+   * initialize the form.
+   * WARNING: Do NOT modify this code. The content of this method is
+   * always regenerated by the Form Editor.
+   */
+  private void initComponents() {//GEN-BEGIN:initComponents
+
+  }//GEN-END:initComponents
+  
+  
+  public Object getSelectedNode(){
+    Object node = null;
+    if (getSelectionPath() != null){
+      node = getSelectionPath().getLastPathComponent();
+    }
+    return node;
+  }
+  
+  
+  // Variables declaration - do not modify//GEN-BEGIN:variables
+  // End of variables declaration//GEN-END:variables
+  
+}
