@@ -1,7 +1,9 @@
 Changes:
-v20030410:  -org.softsmithy.lib.beans.XMLEncoderX now supports CustomStyleProvider
+v20030410:  -org.softsmithy.lib.beans.XMLEncoderX now supports 
+             CustomStyleProvider
             -org.softsmithy.lib.swing.CustomizerActionFactory now has a first 
              simple implementation for alignRight and alignBottom 
+            -org.softsmithy.lib.swing.JXTree added
 v20030319:  -org.softsmithy.lib.swing.JPropertyTable added
             -org.softsmithy.lib.swing.JCustomizerPropertyTable added
             -org.softsmithy.lib.swing.JCustomizerPropertyPane removed
@@ -13,7 +15,8 @@ v20030319:  -org.softsmithy.lib.swing.JPropertyTable added
               -org.softsmithy.lib.beans.XMLEncoderX
               -org.softsmithy.lib.swing.JXTable
             -several convenience constructors for JCustomizer and its subclasses
-            -version naming convention changed: ddmmyyyy -> yyyymmdd (better for sorting)
+            -version naming convention changed: ddmmyyyy -> yyyymmdd 
+             (better for sorting)
 v04032003:  -Fixed some bugs with setting styles
             -Added a property table model for arbitrary beans 
              (org.softsmithy.lib.swing.table.PropertyTableModel)
